# glink

./: .gitattributes  .gitignore  .glink-boot.ts  CONTRIBUTING.md  FORGE_REVIEW_2026-05-24.md  GLINK_WHITEPAPER.md  LICENSE  README.md  glink-config.yaml  glink-daemon.py  glink.py  pyproject.toml
.github/workflows/: ci.yml
bus/: __init__.py  agent_client.py  main_bus.py
bus/docs/: README.md
bus/projects/: sandbox-builder.jsonl  sandbox-builder.jsonl.bak.20260524_233512  sandbox-builder.jsonl.bak2  testglink-analysis.md  testglink-frontend-task.md  testglink.jsonl  testglink_.checkpoint.json
bus/tests/: TEST_REPORT_2026-05-24.md
checkpoints/: sandbox-builder.json
daemon/: __init__.py  api.py  checks.py  config.py  core.py  log.py
dashboard/: commander.html  index.html
docs/: GLINK_WHITEPAPER.md
projects/sandbox-builder/: TEST_REPORT.md  build-step6.py  perf_test.py  sandbox-builder-step1.html  sandbox-builder-step2.html  sandbox-builder-step3.html  sandbox-builder-step4.html  sandbox-builder-step5.html  sandbox-builder-step6.html  sandbox-builder.html  sandbox-builder.html.bak  test-game.html  test-import.html
reporter/: reporter.py
tests/: conftest.py  test_bus.py  test_core.py
workflows/: calculator.yaml  hello-world.yaml  sandbox-builder.yaml  test-parallel.yaml  testglink.yaml
