[project]
name = "glink"
version = "0.5.0"
description = "Zero-dependency multi-agent workflow orchestration engine. YAML-defined pipelines, shared event bus, cross-agent routing."
authors = [{ name = "Gary Lin" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["agent", "workflow", "orchestration", "ai", "automation"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
extend-ignore = ["E402", "E501", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"daemon/core.py" = ["E402"]
"glink-daemon.py" = ["E402"]
"glink.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
