[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glink-engine"
version = "0.3.3"
description = "Multi-Agent Workflow Orchestration Engine. One Bus. Zero Friction."
authors = [{ name = "Gary Lin" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["agent", "workflow", "orchestration", "ai", "automation", "pipeline"]

[tool.hatch.build.targets.sdist]
include = [
    "/bus",
    "/daemon",
    "/reporter",
    "/glink-daemon.py",
    "/glink.py",
    "/glink-config.yaml",
    "/workflows",
]
exclude = [
    "/projects/*/*.bak*",
    "/projects/*/*.fresh*",
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["bus/", "daemon/", "reporter/"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"bus/agent_client.py" = ["E402"]
"bus/main_bus.py" = ["E402"]
"daemon/checks.py" = ["E402"]
"daemon/core.py" = ["E402"]
"daemon/api.py" = ["E402"]
"glink-daemon.py" = ["E402"]
"glink.py" = ["E402"]
"projects/sandbox-builder/build-step6.py" = ["W291", "W293", "N816"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
